@@ -1,4 +1,8 @@
 2015-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+	* tools/device-help.pl:
+	  Minor changes.
+
+2015-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
 	* tools/cfg-import.pl, tools/device-help.pl,
 	  tools/device-manager.pl:
 	  Updated based on the mplabx-3.10.
